[metadata]
name = matching
version = 0.0.2
aruthor= Fernando Muro
author_email = fmuro@us.es
description = rename PDFs according to a list of resembling names
license = GPL-3.0

[options]
packages = matching
install_requires =
    libmatching @ git+https://github.com/FMuro/libmatching.git#egg=libmatching

[options.entry_points]
console_scripts =
    matching = matching.matching:funcion

[options.package_data]
matching = *