[metadata]
name = matching
version = 0.0.3
aruthor= Fernando Muro
author_email = fmuro@us.es
description = rename PDFs according to a list of resembling names
license = GPL-3.0

[options]
packages = matching
install_requires =
    thefuzz
    python-Levenshtein
    numpy
    scipy
    tabulate
    unidecode

[options.entry_points]
console_scripts =
    matching = matching.cli:funcion

[options.package_data]
matching = *